# Bount-Core

./: .env.cmake.example  .gitignore  .gitmodules  CMakeLists.txt  README.md
.cmake/: commands.cmake
examples/DesignPatterns/src/: main.cpp
examples/Singleton/src/: main.cpp
examples/subsystem/src/: main.cpp
impl/Bount/Filesystem/: Dir.cpp  File.cpp  Filesystem.cpp  Path.cpp
include/Bount/Core/: Datatypes.hpp  DesignPatterns.hpp  Filesystem.hpp  Lib-Macro.hpp  Placeholder.hpp  Precompiled.hpp  StandardMacros.hpp  Subsystem.hpp
include/Bount/Filesystem/: Dir.hpp  File.hpp  Filesystem.hpp  Path.hpp
include/Bount/Singleton/: Generic.hpp
include/Bount/Subsystem/: Generic.hpp
module/Bount/Filesystem/: Dir.cppm  File.cppm  Filesystem.cppm  Path.cppm
module/Bount/Singleton/: Singleton.cppm
module/Bount/Subsystem/: Subsystem.cppm
src/Bount/Core/: Filesystem.cpp  Placeholder.cpp  placeholder.cpp
tests/Filesystem/src/: main.cpp
tests/Singleton/src/: main.cpp
